style.css
html {
    font-size: 16px;
}

@media only screen and (max-width: 900px) {
    html {
        font-size: 15px;
    }
    input {
        max-height: 1.05rem;
    }
    #barChartDiv {
        width: 100%;
    }
}

@media only screen and (max-width: 800px) {
    html {
        font-size: 14px;
    }
    input {
        max-height: 1.04rem;
    }
}

@media only screen and (max-width: 700px) {
    html {
        font-size: 13px;
    }
    input {
        max-height: 1.03rem;
    }
}

@media only screen and (max-width: 600px) {
    html {
        font-size: 12px;
    }
    input {
        font-size: 1rem;
        max-height: 1.02rem;
    }
}

@media only screen and (max-width: 500px) {
    html {
        font-size: 11px;
    }
    input {
        max-height: 1rem;
    }
}

@media only screen and (max-width: 400px) {
    html {
        font-size: 10px;
    }
    input {
        max-height: .83rem;
        max-width: 7rem;
    }
}

@media only screen and (max-width: 300px) {
    html {
        font-size: 9px;
    }
    input {
        max-height: .83rem;
    }
}

body {
    font-family: Verdana;
    background-color: rgb(43, 42, 51);
}

header {
    display: block;
    text-align: center;
}

form {
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;
    display: inline-block;
    text-align: left;
    background-color: rgba(0, 0, 0, 0.16);
    border-radius: 20px;
    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
    display: flex;
    justify-content: center;
    position: relative;
}

/* all 3 divs in the header */

.labels {
    color: white;
    text-align: right;
    line-height: 1.85rem;
}

.inputs {
    font-size: 1.1rem;
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
    padding-top: 0.125rem;
}

.everyContributionDiv {
    padding-top: 0.8125rem;
    color: white;
}

.labels, .inputs, .everyContributionDiv {
    margin: 0.75rem 0;
}

input {
    inline-size: 8.125rem;
    margin-bottom: 0.281rem;
}

select {
    font-size: .85rem;
    margin-left: 0.3125rem;
    padding: 0.0625rem;
}

/* submit button */
button {
    font-family: Verdana;
    font-size: .95rem;
    color: black;
    background-color: rgb(117, 206, 136);
    border: none;
    border-radius: 10px;
    padding: 10px 20px;
    margin: 35px auto;
    position: relative;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
}

button:hover {
    background-color: rgb(97, 172, 113);
}

.hidden {
    visibility: hidden;
    width: 0;
    height: 0;
}

#totalsDiv {
    margin: 0 2%;
}

#tableOfTotals {
    margin-bottom: 1.1rem;
    position: relative;
}

#barChartDiv {
    width: 90%;
    height: auto;
    max-width: 1100px;
    max-height: 1200px;
    margin: 0 auto;
    position: relative;
}

#pieChart {
    width: 100%;
    height: 100%;
    max-width: 500px;
    max-height: 180px;
    margin: 30px auto;
    position: relative;
}

table {
    margin: 0 auto;
    border-collapse: separate;
    border: 2px solid gray;
    border-radius: 8px;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
}

#tableDiv {
    margin: 0 2%;
}

#tableOfData {
    margin-top: 50px;
    margin-bottom: 70px;
    position: relative;
}

th, td {
    padding: 16px;
    border-left:solid gray 2px;
    border-top:solid gray 2px;
}

table, th, td {
    color: white;
}

th {
    background-color: #2D4F34;
    border-top: none;
}

td:first-child, th:first-child {
     border-left: none;
}

/* intro page animation*/
.introAnimation {
    animation-name: topToPosition;
    animation-duration: 1s;
}

@keyframes topToPosition {
    from {top: -150px; opacity: 0;}
    to {top: 0px; opacity: 1;}
}

/* chart and table animation */
.submitAnimation {
    animation-name: tableAndChartAnimation;
    animation-duration: .6s;
}

@keyframes tableAndChartAnimation {
    from {margin-top: 70px; opacity: 0;}
    to {margin-top: 0px; opacity: 1;}
}

